--- a/application/asset/sass/_screen.scss
+++ b/application/asset/sass/_screen.scss
@@ -568,15 +568,18 @@ div[role="main"] > h1:first-of-type {
 /* @group ----- Footer ----- */
 
 .sidebar-open footer {
-    padding-right: span(4 of 16) + gutter();
+    margin-right: span(4 of 16);
 }
 
 footer {
     font-size: .75 * $base-font-size;
     position: relative;
-    padding: 0 gutter() 0 (span(3 of 16) + (2 * gutter()));
-    margin-top: rhythm(-1.5);
+    background-color: #fff;
+    margin-left: span(3 of 16);
+    padding-right: gutter();
     text-align: right;
+    @include transition-duration(.5s);
+    @include transition-property(margin-right);
 
     .site-version {
         margin: 0;
